# video-tracker-cpp

video_object_tracker/video_object_tracker/: CMakeLists.txt  package.xml
video_object_tracker/video_object_tracker/config/: tracker.rviz
video_object_tracker/video_object_tracker/include/video_object_tracker/: tracker_types.hpp
video_object_tracker/video_object_tracker/launch/: tracker.launch.py
video_object_tracker/video_object_tracker/src/: tracker_node.cpp  video_reader_node.cpp
